--- a/src/container/index/index.hbs
+++ b/src/container/index/index.hbs
@@ -2,11 +2,34 @@
 Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 }}
+{{!
+Це код container файлу для index сторінки,
+в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
+}}
 
-<main>
-	{{>heading title="Index" info=data.test}}
-</main>
+<div class="page">
+    <h1 class="title">To-do list</h1>
 
+    <div class="form">
+        <input type="text" class="form__input" placeholder="Введіть задачу...">
+        <button class="form__button">Додати</button>
+        <button class="form__button form__button--clear">Видалити</button>
+    </div>
+
+    <main class="task__list">
+
+    </main>
+
+    <template id="task">
+        <div class="task">
+            <span class="task__number">1.</span>
+            <span class="task__text">Заповнити</span>
+            <button class="task__button task__button--do"></button>
+            <button class="task__button task__button--cancel"></button>
+        </div>
+    </template>
+
+</div>
 {{!
     Цей код містить лише те, що буде виводитись в <body>
     Адже наш layout/default.hbs має вже структуру HTML
